<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_background"
    tools:context=".ui.search_fragment.SearchFragment">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/arrow_left"
        app:layout_constraintBottom_toBottomOf="@id/searchEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/searchEditText"
        app:tint="@color/white" />

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/edittext_background2"
        android:drawableEnd="@drawable/ic_launcher_search_icon"
        android:hint="@string/edittext_hint"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="#423F3F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/backButton"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/filterRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchEditText">

        <RadioButton
            android:id="@+id/moviesRadioButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/radio_button_selector"
            android:button="@android:color/transparent"
            android:checked="true"
            android:gravity="center"
            android:text="@string/movies"
            android:textColor="@drawable/radio_button_text_color"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/seriesRadioButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/radio_button_selector"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/tv_series"
            android:textColor="@drawable/radio_button_text_color"
            android:textSize="20sp" />

    </RadioGroup>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/searchContainerShimmer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterRadioGroup">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/placeholder_item_see_all" />

            <include layout="@layout/placeholder_item_see_all" />

            <include layout="@layout/placeholder_item_see_all" />

        </LinearLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchRV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="10dp"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterRadioGroup"
        app:spanCount="2"
        tools:listitem="@layout/item_see_all" />

</androidx.constraintlayout.widget.ConstraintLayout>