<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_background"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    tools:context=".ui.home_fragment.HomeFragment">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/profileCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp">

        <!-- Set of Profile ImageView. -->
        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_image_profil" />
    </com.google.android.material.card.MaterialCardView>

    <!-- Set of Search IconButton. -->
    <ImageButton
        android:id="@+id/searchIconButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/circular_background_search"
        android:contentDescription="@string/search_button"
        android:src="@drawable/ic_launcher_search_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- NestedScrollView was added for content to be scrollable. -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileCardView">

        <!-- ConstraintLayout was added for items to be positioned within NestedScrollView. -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/topRatedMoviesContainerShimmer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shimmer_auto_start="false">

                <include layout="@layout/placeholder_item_image" />

            </com.facebook.shimmer.ShimmerFrameLayout>

            <!-- Set of Top Rated Movies title. -->
            <TextView
                android:id="@+id/topRatedMoviesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/most_pop_movies"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/seeAllTopRatedMovies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_all"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@id/topRatedMoviesTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Set of Top Rated Movies RecyclerVİew -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/topRatedMoviesRV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:visibility="invisible"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/topRatedMoviesTextView"
                tools:listitem="@layout/item_image" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/nowPlayingMoviesContainerShimmer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/topRatedMoviesContainerShimmer"
                app:shimmer_auto_start="false">

                <include layout="@layout/placeholder_item_image" />

            </com.facebook.shimmer.ShimmerFrameLayout>

            <!-- Set of Now Playing Movies title. -->
            <TextView
                android:id="@+id/nowPlayingMoviesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/top_rated_250"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/topRatedMoviesRV" />

            <TextView
                android:id="@+id/seeAllNowPlayingMovies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/see_all"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@id/nowPlayingMoviesTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/topRatedMoviesRV" />

            <!-- Set of Now Playing Movies RecyclerVİew -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/nowPlayingMoviesRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:visibility="invisible"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nowPlayingMoviesTextView"
                tools:listitem="@layout/item_image" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/popularTvSeriesContainerShimmer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nowPlayingMoviesContainerShimmer"
                app:shimmer_auto_start="false">

                <include layout="@layout/placeholder_item_image" />

            </com.facebook.shimmer.ShimmerFrameLayout>

            <!-- Set of Popular TV Series title. -->
            <TextView
                android:id="@+id/popularTvSeriesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/most_pop_series"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nowPlayingMoviesRecyclerView" />

            <TextView
                android:id="@+id/seeAllPopularTvSeries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/see_all"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@id/popularTvSeriesTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nowPlayingMoviesRecyclerView" />


            <!-- Set of Popular TV Series RecyclerVİew -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popularTvSeriesRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:visibility="invisible"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/popularTvSeriesTextView"
                tools:listitem="@layout/item_image" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/topRatedTvSeriesContainerShimmer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/popularTvSeriesContainerShimmer"
                app:shimmer_auto_start="false">

                <include layout="@layout/placeholder_item_image" />

            </com.facebook.shimmer.ShimmerFrameLayout>

            <!-- Set of Top Rated TV Series title. -->
            <TextView
                android:id="@+id/topRatedTvSeriesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/top_boxoffice"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/popularTvSeriesRecyclerView" />

            <TextView
                android:id="@+id/seeAllTopRatedTvSeries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/see_all"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@id/topRatedTvSeriesTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/popularTvSeriesRecyclerView" />

            <!-- Set of Top Rated TV Series RecyclerVİew -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/topRatedTvSeriesRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:visibility="invisible"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/topRatedTvSeriesTextView"
                tools:listitem="@layout/item_image" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>